fixed horizontal scroll with white space on the right

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
-body {
-  width: 100vw;
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
 .header {
